// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta-alarm-rule-patterns-form Renders \`meta-alarm-rule-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object]"
  counter-method="(...args) => module.context.dispatch.apply(store, [value, ...args])"
  disabled="true"
  entity-attributes="[object Object],[object Object],[object Object]"
  value="[object Object]"
  with-alarm=""
  with-entity=""
>
  <!---->
</c-patterns-field-stub>
`;

exports[`meta-alarm-rule-patterns-form Renders \`meta-alarm-rule-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object]"
  counter-method="(...args) => module.context.dispatch.apply(store, [value, ...args])"
  entity-attributes="[object Object],[object Object],[object Object]"
  value="[object Object]"
  with-alarm=""
  with-entity=""
>
  <!---->
</c-patterns-field-stub>
`;
